# rbw-claude-code

./: .markdownlint.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex/agents/: .generated-files.txt  actor-mapper.toml  agent-native-reviewer.toml  api-design-brainstormer.toml  architecture-strategist.toml  baseline-code-reviewer.toml  best-practices-researcher.toml  bug-reproduction-validator.toml  code-simplicity-reviewer.toml  coherence-reviewer.toml  conflict-analyst.toml  data-migration-expert.toml  data-model-brainstormer.toml  deepthink-agent.toml  devils-advocate-brainstormer.toml  drift-reviewer.toml  framework-docs-researcher.toml  gap-detector-geo.toml  gap-detector.toml  (+26 more)
arxiv_paper/: 00README.json  appendix.md  appendix.tex  full_paper.md  main_tech_report.bbl  main_tech_report.bib  main_tech_report.tex  math_commands.tex  nvidiatechreport.cls  paper.md
docs/: README.md  claude-config-transfer-analysis.md  codex-compatibility.md  commands.md  creating-plugins.md  hooks.md
plans/: dangerous-command-guard-hook.md  feat-add-gemini-plan-reviewer.md  feat-claude-code-marketplace-scaffold.md  feat-git-ship-skill.md  poetry-variant-branch.md  refactor-deep-research-domains.md
plugins/deep-research-plus/mcp-server/: .gitignore  README.md  claude_desktop_config.json  example_usage.py  pyproject.toml
scripts/: gemini-review.sh  generate_codex_agents.py  install-codex-agents.sh  setup-hooks-project.sh  setup-hooks.sh
tests/: test_convert_codex.py  test_skill_creator.py
(+292 files in other folders)
