[project]
name = "gdelt-mcp-server"
version = "0.1.0"
description = "MCP server exposing py-gdelt library for geopolitical research agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "gdelt-py[bigquery]>=0.1.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "RET", "SIM", "TRY", "PL"]
ignore = ["PLR0913"]  # Allow many arguments for MCP tool functions

[tool.mypy]
python_version = "3.11"
strict = true
